chore: update target list

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -8,4 +8,5 @@ scrape_configs:
   - job_name: 'vay'
     scrape_interval: 1s
     static_configs:
-      - targets: ['0.0.0.0:9100']
+      - targets: ['1.1.1.1:9100', '1.1.1.2:9100']
+
